# pythonic-patterns

./: .gitignore  Makefile  README.md  pyproject.toml
arjan/: before_dataclass.py  classes.py  corey_vid_1.py  corey_vid_2.py  corey_vid_3.py  corey_vid_4.py  corey_vid_5.py  pyproject.toml
arjan/1_composition/: exercise_attempt.py  exercise_solution.py  with_composition.py
arjan/2_cohesion/: order_before.py
arjan/3_coupling/: exercise.py  exercise_attempt.py  vehicle_rental_after.py
arjan/4_data_focus/: exercise.py  exercise_attempt.py
arjan/4_data_focus/vehicle_rental_example/: vehicle_rental_before.py
arjan/5_abstractions/order_example/: readme.md
arjan/abc_protocol_code_examples/: example_abc.py
arjan/corey/: corey_vid_3.py  corey_vid_6.py
arjan/dataclass_examples/: dataclass.py
arjan/employee_example/: before.py  exercise.py  with_inheritance.py
arjan/misc/: bolus_schedule.py
corey/: corey_vid_1.py  decorators.py  simple_decorator.py
misc/: addition_controller.py  linear_step.py
pythonic-patterns/abstract_factory/: classic.py  readme.md
pythonic-patterns/functional_pattern/: callback.py  readme.md
pythonic-patterns/notification_pattern/: mediator.py  observer.py  readme.md
pythonic-patterns/pipeline_pattern/: readme.md
pythonic-patterns/registry_pattern/: readme.md
pythonic-patterns/strategy_pattern/: readme.md  strategy_before.py  strategy_with_abc.py  strategy_with_callable.py  strategy_with_function.py  strategy_with_partial_function.py  strategy_with_protocol.py
pythonic-patterns/template_method_pattern/: readme.md
(+27 files in other folders)
