[tool.poetry]
name = "arjan"
version = "0.1.0"
description = ""
authors = ["Salmireles <sal.chemicale@gmail.com>"]

[tool.poetry.dependencies]
# Required installs on mac https://github.com/uiri/toml/issues/77 to have po
python = "==3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
